--- a/topics.html
+++ b/topics.html
@@ -170,7 +170,7 @@
     </a>
   </li>
   <li>
-    <a href="C:\laibarary\ali\seminar\topics\mlaz.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="topics/mlaz.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">الخزانات الجوفية وأنواعها</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: ملاذ يوسف</p>
