--- a/images.html
+++ b/images.html
@@ -145,11 +145,11 @@
   </header>
 
   <div class="album-bar">
-    <div class="album" onclick="selectAlbum('topic1')"><div></div><p>Topic 1</p></div>
-    <div class="album" onclick="selectAlbum('topic2')"><div></div><p>Topic 2</p></div>
-    <div class="album" onclick="selectAlbum('topic3')"><div></div><p>Topic 3</p></div>
-    <div class="album" onclick="selectAlbum('topic4')"><div></div><p>Topic 4</p></div>
-    <div class="album" onclick="selectAlbum('topic5')"><div></div><p>Topic 5</p></div>
+    <div class="album" onclick="selectAlbum('topic1')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic2')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic3')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic4')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic5')"><div></div><p></p></div>
   </div>
 
   <div class="slideshow-container">
@@ -161,11 +161,11 @@
 
 
   <div class="album-bar">
-    <div class="album" onclick="selectAlbum('topic1')"><div></div><p>Topic 1</p></div>
-    <div class="album" onclick="selectAlbum('topic2')"><div></div><p>Topic 2</p></div>
-    <div class="album" onclick="selectAlbum('topic3')"><div></div><p>Topic 3</p></div>
-    <div class="album" onclick="selectAlbum('topic4')"><div></div><p>Topic 4</p></div>
-    <div class="album" onclick="selectAlbum('topic5')"><div></div><p>Topic 5</p></div>
+    <div class="album" onclick="selectAlbum('topic1')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic2')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic3')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic4')"><div></div><p></p></div>
+    <div class="album" onclick="selectAlbum('topic5')"><div></div><p></p></div>
   </div>
 
 
