--- a/topics.html
+++ b/topics.html
@@ -146,7 +146,7 @@
     <h2>أبرز الموضوعات التي تم مناقشتها</h2>
 <ul>
   <li>
-    <a href="#" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="zinab.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">مقدمة عن الطبقات الجيولوجية والنظام المائي الجوفي</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: زينب ابراهيم</p>
@@ -156,13 +156,13 @@
   <li>
     <a href="waad.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
-        <strong style="font-size: 1.2rem;">أنواع الطبقات الجيولوجية وخصائصها</strong>
+        <strong style="font-size: 1.2rem;">تأثير التراكيب الجيولوجية على تدفق المياه الجوفية </strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: وعد سعد</p>
       </div>
     </a>
   </li>
   <li>
-    <a href="#" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="mhmood-hoota.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">المسامية والنفاذية في الطبقات الجيولوجية</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: محمود محمد</p>
@@ -188,13 +188,13 @@
   <li>
     <a href="rzaz.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
-        <strong style="font-size: 1.2rem;">تأثير التراكيب الجيولوجية على تدفق المياه الجوفية</strong>
+        <strong style="font-size: 1.2rem;">  أنواع الطبقات الجيولوجية وخصائصها</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: رزاز محمد</p>
       </div>
     </a>
   </li>
   <li>
-    <a href="#" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="mazen.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">دور الصخور الرسوبية في النظام المائي الجوفي</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: مازن حيدر</p>
@@ -210,7 +210,7 @@
     </a>
   </li>
   <li>
-    <a href="#" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="modar.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">التفاعلات الكيميائية بين الطبقات الجيولوجية والمياه الجوفية</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: مضر سعيد</p>
