--- a/modar.html
+++ b/modar.html
@@ -119,7 +119,7 @@
   <h2 style="color: #a0e9ff; text-align: center; margin-bottom: 20px;">شاهد الفيديو التوضيحي</h2>
   <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.5);">
     <video controls style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;">
-      <source src="/سمنار/video/VID-20250419-WA0020.mp4" type="video/mp4">
+      <source src="VID-20250419-WA0020.mp4" type="video/mp4">
       متصفحك لا يدعم تشغيل الفيديو.
     </video>
   </div>
