--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@ header {
 /* زر AI الدائري */
 .ai-launcher {
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 65px;
+  right: 45%;
   width: 60px;
   height: 60px;
   background: linear-gradient(135deg, #006064, #00acc1);
