--- a/rzaz.html
+++ b/rzaz.html
@@ -230,7 +230,7 @@
   <div style="margin-top: 30px; text-align: center;">
   <h2 style="color: cornflowerblue; margin-bottom: 10px;">استمع إلى الشرح الصوتي:</h2>
   <audio controls style="width: 100%; max-width: 600px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.3);" controlsList="nodownload">
-    <source src="audio\rzaz.opus" type="audio/ogg">
+    <source src="rzaz.opus" type="audio/ogg">
     متصفحك لا يدعم تشغيل الصوت.
   </audio>
 </div>
@@ -243,7 +243,7 @@
     <a href="topics.html">الرجوع للموضوعات</a>
     <a class="back-btn" href="index.html">العودة إلى أقسام البرنامج</a>
     
-    <a href="audio\rzaz.opus" download>تحميل الملف الصوتي</a>
+    <a href="rzaz.opus" download>تحميل الملف الصوتي</a>
   </div>
   
   
