--- a/mlaz.html
+++ b/mlaz.html
@@ -221,7 +221,7 @@
 <div style="margin-top: 30px; text-align: center;">
   <h2 style="color: cornflowerblue; margin-bottom: 10px;">استمع إلى الشرح الصوتي:</h2>
   <audio controls style="width: 100%; max-width: 600px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.3);" controlsList="nodownload">
-    <source src="ليميا.aac" type="audio/aac">
+    <source src="mlaz.m4a" type="audio/aac">
     متصفحك لا يدعم تشغيل الصوت.
   </audio>
 </div>
@@ -229,7 +229,7 @@
     <a href="topics.html">الرجوع للموضوعات</a>
     <a class="back-btn" href="index.html">العودة إلى أقسام البرنامج</a>
     
-    <a href="ليميا.aac" download>تحميل الملف الصوتي</a>
+    <a href="mlaz.m4a" download>تحميل الملف الصوتي</a>
   </div>
 
   <script>
