--- a/topics.html
+++ b/topics.html
@@ -162,7 +162,7 @@
     </a>
   </li>
   <li>
-    <a href="mhmood-hoota.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
+    <a href="MahmoodMohammed.html" style="display: block; background: rgba(0, 188, 212, 0.08); padding: 15px; border-radius: 12px; margin-bottom: 20px; color: inherit; text-decoration: none;">
       <div>
         <strong style="font-size: 1.2rem;">المسامية والنفاذية في الطبقات الجيولوجية</strong>
         <p style="margin-top: 10px; color: #ffffffcc;">إعداد: محمود محمد</p>
