--- a/ali_hafiz_topic.html
+++ b/ali_hafiz_topic.html
@@ -278,14 +278,19 @@ summary {
 </details>
 
 
-
+<div style="margin-top: 30px; text-align: center;">
+  <h2 style="color: cornflowerblue; margin-bottom: 10px;">استمع إلى الشرح الصوتي:</h2>
+  <audio controls style="width: 100%; max-width: 600px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.3);" controlsList="nodownload">
+    <source src="ali_simnar_compressed.mp3" type="audio/aac">
+    متصفحك لا يدعم تشغيل الصوت.
+  </audio>
+</div>
 
 
   </div>   <div class="buttons-container">
     <a href="topics.html">الرجوع للموضوعات</a>
     <a class="back-btn" href="index.html">العودة إلى أقسام البرنامج</a>
-   <a href="files/groundwater-management.pdf" download>تحميل كـ PDF</a>
-    <a href="audio/groundwater.mp3" download>تحميل الملف الصوتي</a>
+    <a href="ali_simnar_compressed.mp3" download>تحميل الملف الصوتي</a>
   </div>  <script>
     function downloadPDF() {
       const { jsPDF } = window.jspdf;
