--- a/audio.html
+++ b/audio.html
@@ -157,6 +157,23 @@
         متصفحك لا يدعم مشغل الصوت.
       </audio>
     </div>
+    <div class="audio-item">
+      <h4>المسامية والنفاذية في الطبقات الجيولوجية
+إعداد: محمود محمد</h4>
+      <audio controls>
+        <source src="Mahmoodmoh.opus" type="audio/ogg">
+        متصفحك لا يدعم مشغل الصوت.
+      </audio>
+    </div>
+    
+    <div class="audio-item">
+      <h4>الخزانات الجوفية وأنواعها
+إعداد: ملاذ يوسف</h4>
+      <audio controls>
+        <source src="mlaz.m4a" type="audio/ogg">
+        متصفحك لا يدعم مشغل الصوت.
+      </audio>
+    </div>
 
     <div class="audio-item">
       <h4>أنواع الطبقات الجيولوجية وخصائصها - إعداد: وعد سعد</h4>
@@ -171,6 +188,22 @@
       <h4>طرق دراسة العلاقة بين الطبقات الجيولوجية والمياه الجوفية - إعداد: لمياء كبسور</h4>
       <audio controls>
         <source src="ليميا.aac" type="audio/aac">
+        متصفحك لا يدعم مشغل الصوت.
+      </audio>
+    </div>
+    <div class="audio-item">
+      <h4>التحديات والحلول في إدارة المياه الجوفية في الطبقات الجيولوجية المعقدة
+إعداد: علي حافظ</h4>
+      <audio controls>
+        <source src="ali_simnar_compressed.mp3" type="audio/aac">
+        متصفحك لا يدعم مشغل الصوت.
+      </audio>
+    </div>
+    <div class="audio-item">
+      <h4>مقدمة عن الطبقات الجيولوجية والنظام المائي الجوفي
+إعداد: زينب ابراهيم</h4>
+      <audio controls>
+        <source src="zinab.opus" type="audio/aac">
         متصفحك لا يدعم مشغل الصوت.
       </audio>
     </div>
